tests/ui/nll/issue-57843.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57843.rs:25:9
   |
LL |     Foo(Box::new(|_| ()));
   |     --- ^^^^^^^^^^^^^^^^ expected `Box<dyn ClonableFn<&bool>>`, found `Box<{closure@issue-57843.rs:25:18}>`
   |     |
   |     arguments to this struct are incorrect
   |
   = note: expected struct `Box<(dyn for<'a> ClonableFn<&'a bool> + 'static)>`
              found struct `Box<{closure@$DIR/issue-57843.rs:25:18: 25:21}>`
   = help: `{closure@$DIR/issue-57843.rs:25:18: 25:21}` implements `ClonableFn` so you could box the found value and coerce it to the trait object `Box<dyn ClonableFn>`, you will have to change the expected type as well
note: tuple struct defined here
  --> $DIR/issue-57843.rs:22:8
   |
LL | struct Foo(Box<dyn for<'a> ClonableFn<&'a bool>>);
   |        ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
